# svlist

./: LICENSE.txt  pyproject.toml
svlist/: __init__.py
